objects/Campaign.object
<CustomObject><fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Join_Link__c</fullName>
        <label>Join Link</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Max_Capacity__c</fullName>
        <label>Max Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Registration_Link__c</fullName>
        <label>Registration Link</label>
        <type>Url</type>
    </fields><fields>
        <fullName>revenue_difference__c</fullName>
        <description>Positive number, we earned more than expected. Negative, we still have a ways to go.</description>
        <formula>AmountWonOpportunities - ExpectedRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Positive number, we earned more than expected. Negative, we still have a ways to go.</inlineHelpText>
        <label>revenue difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><sharingModel>FullAccess</sharingModel><listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews><listViews>
        <fullName>Inactive</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
    </listViews><listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews></CustomObject>